# talos

./: .dockerignore  .env.example  .flake8  .gitignore  .gitmodules  .snyk  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_TEMPLATE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.debug  LICENSE  Makefile  PROTOCOL.md  README.md  RUNBOOK.md  SECURITY.md  ai_gateway_perf.json  audit_perf.json  changes.patch  check_links.py  commit_claude_docs.sh  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  events_test.json  gateway_perf.json  implementation.md  implementation_plan_ucp.md  mypy.ini  package-lock.json  parallel_execution_plan.md  parallel_task.json  pyproject.toml  pyrefly.toml  requirements.txt  run_all.sh  run_all_tests.sh  (+7 more)
.agent/: README.md  perf_contract.yml
.agents/: README.md
.githooks/: pre-commit
.tmp-wiki/: Home.md  README.md  _Sidebar.md  api-api-reference.md  architecture-infrastructure.md  architecture-overview.md  architecture-protocol-guarantees.md  architecture-threat-model.md  architecture-wire-format.md  business-agent-lifecycle.md  business-gtm-plan.md  business-why-talos-wins.md  features-authorization-access-control.md  features-authorization-agent-capabilities.md  features-authorization-capability-authorization.md  features-identity-agent-identity.md  features-identity-dids-dht.md  features-identity-key-management.md  features-integrations-framework-integrations.md  features-integrations-mcp-cookbook.md  features-integrations-mcp-integration.md  features-integrations-mcp-proof-flow.md  features-messaging-a2a-channels.md  features-messaging-double-ratchet.md  features-messaging-group-messaging.md  features-observability-audit-explorer.md  features-observability-audit-scope.md  features-observability-audit-use-cases.md  features-observability-observability.md  features-operations-global-load-balancing.md  features-operations-multi-region.md  getting-started-getting-started.md  getting-started-mental-model.md  getting-started-one-command-demo.md  getting-started-quickstart.md  getting-started-talos-60-seconds.md  guides-error-troubleshooting.md  guides-hardening-guide.md  guides-production-hardening.md  reference-alternatives-comparison.md  (+16 more)
.trunk/: trunk.yaml
api-testing/: README.md
benchmarks/: __init__.py  run_benchmarks.py
config/: permissions.example.yaml
deploy/: RUNBOOK.md  submodules.json  submodules.py  test_results.txt
docker/: Dockerfile.ingress  Dockerfile.talos-node  Dockerfile.ucp-connector  entrypoint.sh
docs/: Mathematical_Security_Proof.md  docker-image-contract.md
examples/: 01_crypto.py  02_blockchain.py  05_did.py  07_validation.py  09_enterprise_performance.py  10_sdk_quickstart.py  README.md  mcp_connect_demo.py  mcp_serve_demo.py  mcp_server_ollama.py
governance-agent/: README.md  pyproject.toml  tga.db-shm
governance-agent/src/governance_agent/: __init__.py
governance-agent/src/tga/domain/: logic.py  models.py
governance-agent/src/tga/infrastructure/: memory_store.py  sqlite_store.py
governance-agent/tests/: test_tga.py
interop/: go_vectors.json  java_vectors.json  rust_vectors.json
libs/talos-config/: pyproject.toml
libs/talos-config/src/talos_config/: __init__.py  loader.py
libs/talos-config/tests/: test_loader.py  verify_validation.py
pages/: developer.md
proto/: talos.proto
sandbox/: Dockerfile  docker-compose.sandbox.yml
scratch/: fix_quotes.py
scripts/: README.md  agent_sync.py  check_submodule_drift.sh  check_submodules_topology.py  cleanup_generated.sh  commit_docs.sh  complexity_analysis.py  coverage_coordinator.py  docker_build_sdk_tool.sh  generate-local-secrets.sh  generate_audit_vectors.py  generate_live_traffic.py  generate_repos_manifest.sh  generate_schemas.py  generate_security_vectors.py  integration_traffic.sh  no_placeholders.sh  pre-commit  pre-commit-validate.sh  pre-push-validate.sh  provenance_report.txt  provenance_scan.sh  pull-all-changes.sh  push_all_changes.sh  relicense_summary.md  repos_manifest.generated.txt  repos_manifest.txt  run-karate.sh  run_coverage.sh  run_integration.sh  run_tests.sh  scan-secrets.sh  sync_codex_skills.py  sync_submodule_agents.py  test.sh  test_integration.py  test_py.sh  test_sdk_demo.py  test_ui.sh  third_party_dirs.txt  (+8 more)
sdks/: docker-compose.test.yml
talos-sdk-copy/: Makefile  README.md  pyproject.toml
talos-sdk-copy/.github/workflows/: ci.yml  publish.yml
talos-sdk-copy/benchmarks/: README.md  RESULTS.md  bench_crypto.py
talos-sdk-copy/demos/: a2a_demo.py  a2a_error_demo.py  a2a_group_demo.py  a2a_sequence_demo.py
talos-sdk-copy/docs/wiki/: Architecture.md
talos-sdk-copy/examples/: README.md  _common.py  a2a_live_integration.py  a2a_messaging.py  group_management.py  multi_message_demo.py  quickstart.py  secrets_demo.py  session_persistence_demo.py  sign_mcp.py
talos-sdk-copy/scripts/: check_readme_version.py  cleanup.sh  generate_v1_1_0_vectors.py  pre-commit  setup-hooks.sh  start.sh  stop.sh  test.sh
talos-sdk-copy/src/talos_sdk/: __init__.py  canonical.py  client.py  container.py  crypto.py  errors.py  frames.py  mcp.py  mcp_client.py  security.py  session.py  validation.py  wallet.py
talos-sdk-copy/src/talos_sdk/a2a/: __init__.py  errors.py  models.py  ratchet_crypto.py  sequence_tracker.py  session_client.py  transport.py
talos-sdk-copy/src/talos_sdk/adapters/: crypto.py  hash.py  memory_store.py
talos-sdk-copy/src/talos_sdk/conformance/: cli.py  handlers.py  reports.py  runner.py
talos-sdk-copy/src/talos_sdk/ports/: __init__.py  audit_store.py  crypto.py  hash.py  key_value_store.py
talos-sdk-copy/tests/: test_a2a.py  test_a2a_ratchet.py  test_adapters.py  test_client.py  test_container.py  test_crypto.py  test_identity_validation.py  test_mcp.py  test_secrets.py  test_security.py  test_session.py  test_wallet.py
tools/setup-helper/: pyproject.toml
tools/setup-helper/talos_setup_helper/: agent.py  auth.py  cli.py  executor.py  jail.py  manifest.py
tools/setup-helper/talos_setup_helper/resources/: manifest.json
tools/setup-helper/tests/: test_agent_realism.py  test_security.py
(+688 files in other folders)
