[project]
name = "talos-protocol"
version = "3.3.9"
description = "Talos: A secure, decentralized protocol for AI Agent communication"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=41.0.0",
  "websockets>=12.0",
  "click>=8.1.0",
  "msgpack>=1.0.0",
  "pydantic>=2.0.0",
  "aiohttp>=3.9.0",
  "pyyaml>=6.0.0",
  "lmdb>=1.4.1",
  "orjson>=3.9.0",
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "rfc8785>=0.1.4",
  "http-sfv>=0.9.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
  "types-PyYAML>=6.0.0",
  "types-jsonschema>=4.0.0",
]

[project.scripts]
talos = "src.client.cli:cli"
talos-server = "src.server.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "talos*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.workspace]
members = [
  "governance-agent",
  "examples/ucp-merchant/ucp-reference-merchant",
  "services/*",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
  "jsonschema",
  "jsonschema.*",
  "yaml",
  "yaml.*",
  "msgpack",
  "msgpack.*",
]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "C4", "UP"]
ignore = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["core", "src", "talos_sdk", "talos_contracts"]
