[project]
name = "talos-protocol"
version = "5.15.9"
description = "Talos: A secure, decentralized protocol for AI Agent communication"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Talos Protocol Founders", email = "founders@talosprotocol.com" },
]
maintainers = [{ name = "Talos Reach", email = "reach@talosprotocol.com" }]
requires-python = ">=3.11"
dependencies = [
  "cryptography>=46.0.3",
  "websockets>=12.0",
  "click>=8.1.0",
  "msgpack>=1.0.0",
  "pydantic>=2.0.0",
  "aiohttp>=3.10.2",
  "pyyaml>=6.0.0",
  "lmdb>=1.4.1",
  "orjson>=3.9.0",
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "rfc8785>=0.1.4",
  "http-sfv>=0.9.9",
  "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
  "types-PyYAML>=6.0.0",
  "types-jsonschema>=4.0.0",
  "sqlalchemy>=2.0.25",
  "fastapi>=0.109.2",
  "requests>=2.31.0",
  "pyjwt>=2.8.0",
  "redis>=5.0.1",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "uvicorn>=0.27.0",
  "opentelemetry-sdk",
  "opentelemetry-api",
  "opentelemetry-exporter-otlp",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-exporter-otlp-proto-grpc",
  "opentelemetry-instrumentation-sqlalchemy",
  "sse-starlette",
  "slowapi>=0.1.9",
  "mcp>=1.1.0",
  "prometheus-client>=0.19.0",
  "anthropic>=0.39.0",
  "google-genai>=1.0.0",
  "alembic>=1.11.0",
  "pydantic-settings>=2.0.0",
  "flask>=3.0.3",
  "gunicorn>=22.0.0",
  "talos-contracts",
  "talos-sdk-py",
  "talos-config",
  "talos-governance-agent",
  "talos-mcp-connector",
  "talos-ai-gateway",
]

[project.scripts]
talos = "src.client.cli:cli"
talos-server = "src.server.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "talos*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "api-testing/pytest"]
markers = [
    "integration: tests that require live services (deselected by default)",
]
addopts = "-m 'not integration'"

[tool.uv.workspace]
members = [
  "governance-agent",
  "examples/ucp-merchant/ucp-reference-merchant",
  "services/ai-gateway",
  "services/audit",
  "services/gateway",
  "services/mcp-connector",
  "services/ucp-connector",
  "services/governance-agent",
  "libs/*",
  "sdks/python",
  "contracts/python",
]
exclude = ["services/ai-chat-agent", "services/aiops", "services/ingress"]
[tool.uv.sources]
talos-sdk-py = { workspace = true }
talos-contracts = { workspace = true }
talos-config = { workspace = true }
talos-governance-agent = { workspace = true }
talos-mcp-connector = { workspace = true }
talos-ai-gateway = { workspace = true }

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
  "jsonschema",
  "jsonschema.*",
  "yaml",
  "yaml.*",
  "msgpack",
  "msgpack.*",
]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "C4", "UP"]
ignore = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["core", "src", "talos_sdk", "talos_contracts"]
