[project]
name = "governance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nilesh Chakraborty", email = "nileshchakraborty@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "fastmcp>=2.14.4",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "uuid6>=2025.0.1",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest-asyncio>=1.3.0",
]
