[project]
name = "governance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Nilesh Chakraborty", email = "nileshchakraborty@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
  "cryptography>=46.0.3",
  "fastmcp>=2.14.4",
  "pydantic>=2.12.5",
  "uuid6>=2025.0.1",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pip-audit>=2.10.0", "pytest-asyncio>=1.3.0"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
