[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talos-sdk-py"
version = "0.1.25"
description = "Talos Protocol Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Talos Team", email = "sdk@talosprotocol.com" }
]
keywords = ["blockchain", "security", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "jsonschema>=4.18.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "build",
    "types-requests",
    "types-setuptools"
]

[project.scripts]
talos-sdk = "talos_sdk.conformance.cli:main"

[tool.talos.talos_compatibility]
protocol_range = "^1.0.0"
contract_hash = "3gi_Ti6G17oMQabjDlVUXcfBqOjN4HswNdD4Lu0uyyI"
schedule_hash = "TUk4d-djKlVaeLHIF922mq_otmiMOlskHJBA_D23zIA"
features = ["ratchet"]
contracts_version = "1.0.0"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle (Google)
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107", 
    "D200", "D205", "D212", "D403", "D415",
    "B904", "B023", "E501"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E501", "S101", "B011"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
# Enforce strictness on Core Modules
module = [
    "talos_sdk.canonical",
    "talos_sdk.wallet",
    "talos_sdk.mcp",
    "talos_sdk.session",
    "talos_sdk.crypto"
]
disallow_any_generics = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["src/talos_sdk/conformance/*"]

